langtools/test/tools/javac/generics/6711619/T6711619a.out
T6711619a.java:63:14: compiler.err.cant.resolve.args: kindname.method, a, , 
T6711619a.java:64:14: compiler.err.cant.resolve.args: kindname.method, b, , 
T6711619a.java:69:19: compiler.err.report.access: a, private, T6711619a.A
T6711619a.java:70:19: compiler.err.report.access: b, private, T6711619a.B
T6711619a.java:71:19: compiler.err.report.access: a, private, T6711619a.A
T6711619a.java:72:19: compiler.err.report.access: b, private, T6711619a.B
6 errors
